style.css
/* Montserrat font */
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:wght@900&display=swap');

/* reset */
*, *::before, *::after {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* variables */
:root {
    --col-prim: #FF9F51;
    --col-bg: #050312;
    --col-sec: #1a2614;
    --col-owner-prim: #FFCF00;
    --col-owner-sec: #FFF0AD;

    --padd-sm: 10px;
    --padd-big: 20px;
    --padd-lg: 40px;
    --brad--def: 20px;

    font-size: 14px;
    font-family: 'Montserrat', 'sans-serif';
    color: white;
}

/* icon class - all icons must use this class */
.icon {
    background-image: url("imgs/spritesheet.svg");
    background-size: 80px;
    width: 20px;
    height: 20px;
    display: inline-block;

    /* example icons use
     
      <span class="icon thumbs-down-filled-i"></span>
      .star {
          background-position: -100px -50px;   // values must be [-width * x] [-width * y]
          background-size: 200px;              // ratio of width / height to background size is 1:4
          width: 50px;                        
          height: 50px;
      } 
     
    */
}

/* main background */
body {
    background-color: var(--col-bg);
    background-image: url("imgs/bgs/blackwall.jpg"); 
    background-size: 100%;
    background-attachment: fixed; 
}
.bg-tint{
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.18); 
    z-index: -1;
}

/* header styles */

.container {
    position: sticky;
    float: top;
    top: 0.00000000000000000000000000000000000000000000000001px;
    z-index: 1;
}

.header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: var(--col-sec);
    padding: var(--padd-sm) 40px;
    
    border-bottom: 1px solid var(--col-prim);
}

.header-item {
    flex-grow: 0;
    flex-basis: calc(100% / 3);
}

.logo {
    width: 180px;
}

/* 2nd header-item in header */
.header-item:nth-child(2) {
    display: flex;
    justify-content: center;
    align-items: center;
}

/* to absolutely position search icon */
.search-div {
    width: 60%;
    height: 70%;
    position: relative;
}

#search-bar {
    width: 100%;
    height: 100%;
    border-radius: 20px;
    padding: 10px;
    border: 2px solid var(--col-prim);
}

#search-bar:focus{
    border-color: #fff;
}

.search-i {
    background-position: -60px -60px;
    position: absolute;
    right: 10px;
    top: 8px;
}

.header-item:nth-child(3) {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.login {
    font-size: 1.4rem;
    color: var(--col-prim);
    text-decoration: none;
    cursor: pointer;
}

.profile-i {
    margin-left: 40px;
    background-position: -40px -60px;
}
/* end of header styles */

/* login popup styles */
#login-container {
    display: none;

    position: fixed;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.7);
    z-index: 2;

    /* display: flex; */
    flex-direction: row;
    justify-content: center;
    align-items: center;

    
}

.popup {
   display: flex;  
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 80px;
   position: relative;
   padding-inline: 60px;
}

.popup-x-i {
    background-position: -20px -60px;
    position: absolute;
    left: 10px;
    top: 8px;
}

.or-box {
    font-size: 1.5rem;
    font-weight: bold;
    border-bottom: 5px solid white;
    padding: 10px;
}

.login-box, .register-box {
    width: 400px;
    padding: var(--padd-big);
    border-radius: 10px;
}

.login-box {
    background-color: #292F33;
    height: 350px;
}

.register-box {
    background-color: white;
    height: 550px;
    color: #292F33;
}

.login-title {
    color: var(--col-prim);
    font-size: 2.5rem;
    height: 20%;
}

.register-title {
    font-size: 2.5rem;
    height: 50px;
    text-align: right;
}

.register-prompt {
    opacity: 0.8;
    text-align: right;
    font-weight: bold;
    font-size: 1.8rem;
    font-style: italic;
    padding-bottom: 5px;
    margin-bottom: 10px;
    border-bottom: 5px solid #292F33;
}

.login-form {
    height: 80%;
   display: flex;  
   flex-direction: column;
   justify-content: space-around;
}

.login-label {
    font-size: 1.4rem;
}

.login-input, .register-input {
    width: 100%;
    height: 50px;
    border-radius: 8px;
    display: block;
    font-size: 1.5rem;
    margin-top: 3px;
    padding: var(--padd-sm)
}

.register-input {
    background-color: #292F33;
    color: white;
}

.popup-button {
    width: 150px;
    height: 30px;
    border-radius: 20px;
    background-color: #292F33;
    color: white;
    border: 2px solid gray;
    align-self: center;
}
/* end of login styles */

/* homepage */
.p1-content {
    padding: var(--padd-lg);
}

#p1-restaurants-list {
    list-style-type: none;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 50px;
}

.p1-star-i {
    background-position: -150px 0;
    background-size: 200px;
    width: 50px;
    height: 50px;

    margin-right: 25px;
}

.p1-label-container {
    display: flex;
    align-items: center;
    margin-bottom: 40px;
} 

.p1-label {
    display: inline-block;
    font-size: 2.5rem;
}

.p1-card {
    display: flex;
    flex-direction: column;
    width: 220px;
    max-height: 325px;
    overflow: hidden;
}

.p1-resto-name {
    font-size: 1.5rem;
    color: var(--col-prim);
}

.p1-card-img {
    width: 80%;
    aspect-ratio: 1;
    object-fit: cover;
    border-radius: var(--brad--def);
    margin-bottom: 10px;

    border: 2px solid white;
    box-shadow: 7px 10px 7px rgba(0, 0, 0, 0.7); 

}

.p1-rating-i {
    background-size: 40px;       
    width: 10px;
    height: 10px;
}

.p1-reviews {
    font-size: 0.8rem;
    color: #b4b9b9;
}

.p1-description {
    margin-top: 5px;
    font-size: 0.8rem;
}

/*user profile page*/
.pro-main{
    display: flex;
    flex-direction: row;
    justify-content: space-between;     

    width: auto;
    height: auto;

    /*outline: red solid 3px;*/
}

.pro-review-holder{
    display: flex;
    flex-direction: column;
    margin-right: 10px;

    margin-top: auto;
    margin-bottom: auto;
    margin-left: 28%;
    height: auto;
    width: 70%;

    color: black;

}

.pro-actions {
    position: absolute;
    top: 20px;
    right: 20px;
    font-size: 1.2rem;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 100px;
}

.pro-actions span
{
    background-size: 100px;             
    width: 25px;                        
    height: 25px;
}

.pro-like {
    background-position: -25px -25px;   
}

.pro-dislike {
    background-position: -75px -25px;
}

.pro-toggle-like {
    background-position: -0px -25px;
}

.pro-toggle-dislike {
    background-position: -50px -25px;
}

li.pro-review-box{
    list-style-type: none;
}

.pro-review-box{
    width: 80%;
    height: 20vh;
    margin-top: 3vh;

    margin-left: auto;
    margin-right: auto;

    padding: 2vh 0 0 2vh;
    font-size: 5vh;

    background-color: white;
    border: 2px solid var(--col-prim);
    border-radius: 10px;

    position: relative;
}

.pro-review-header{
    margin-left: 10%;
    font-size: 3vh;
    width: 50%;
    height: 50%;
    line-height: 130%;
}

.pro-review-text{
    padding-top: .5vh;
    font-size: 2vh;
}   

.pro-review-icon{
    width: 4vw;
    aspect-ratio: 1;
    
    border-radius: 100%;
    margin-right: 10px;
    position: absolute;
    border: 2px solid #000000;
    box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.5); 

}

li.pro-or-box{
    list-style-type: none;
}
.pro-or-box{
    width: 60%;
    height: 18vh;

    margin-left: auto;
    margin-right: auto;
    margin-top: -.2vh;
    
    padding: 2vh 0 0 2vh;

    font-size: 2vh;
    color:var(--col-owner-prim);

    background-color: var(--col-sec);
    border: 2px solid white;
    border-radius:  0 0 15px  15px ;

    position: relative;
}

.pro-or-header{
    margin-left: 10%;
    font-size: 2.5vh;
    width: 50%;
    height: 25%;
}

.pro-or-text{
    font-size: 2vh;
    margin-right: 1vh;
    margin-top: 1vh;
    color: var(--col-owner-sec);
}

.pro-or-icon{
    width: 3vw;
    aspect-ratio: 1;
    
    border-radius: 100%;
    padding: 0% ;
    margin-top: -1.4vh;
    margin-left: 1.2vh;

    position: absolute;

}

.pro-sidebar{
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-right: 10px;
    position: fixed;

    height: 90%;
    width: 25%;

    
}

.pro-sidebar-bg{
    width: 100%;
    height: 90%;
    background-color: var(--col-sec);
    border-radius: 0 30px 30px 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding: var(--padd-lg);

    
    border: 1px solid #ffffff;
    border-left: 0px;
}

.sb-name {
   font-size: 2.5rem; 
}

.sb-pic {
    width: 180px;
    aspect-ratio: 1;
}

.sb-pic img {
    width: 100%;
    height: 100%;
    border-radius: 50%;

    
    border: 2px solid #ffffff;
    box-shadow: 7px 10px 7px rgba(0, 0, 0, 0.5); 
}

.sb-description {
    line-height: 20px;
    text-align: center;
    height: 100px;
}

.sb-stats {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    font-size: 1.5rem;
}

.edit-user {
    background-color: #fff;
    width: 100px;
    height: 40px;
    display: flex;
    flex-direction: row; 
    justify-content: center;
    align-items: center;
    gap: 10px;
    border-radius: 20px;
    text-decoration: none;
    color: black;
}

.edit-user-text {
    width: 40%;
}

.edit-i {
    background-position: -50px -50px;
    background-size: 100px;
    width: 25px;
    height: 25px;
}

.orange-bold {
    font-weight: bold;
    color: var(--col-prim);
}
/*span and inline classes*/
.bold{
    font-weight: bold;
}

.italics{
    font-style: italic;
}

.bitalics{
    font-style: italic;
    font-weight: bold;

}

